feat: typed dto for SSE
