# packages/yucca-api-client/openapi-specs.json
@@ -114,7 +114,14 @@
         ],
         "responses": {
           "200": {
-            "description": ""
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DeviceFlowEventDto"
+                }
+              }
+            }
           }
         },
         "tags": [
@@ -656,6 +663,53 @@
           "email",
           "sessionId",
           "features"
+        ]
+      },
+      "DeviceFlowEventType": {
+        "type": "string",
+        "enum": [
+          "START",
+          "SUCCESS",
+          "FAILURE"
+        ]
+      },
+      "DeviceFlowFailureReason": {
+        "type": "string",
+        "enum": [
+          "UNKNOWN",
+          "EMAIL_NOT_ALLOWED",
+          "FEATURE_NOT_ENABLED"
+        ]
+      },
+      "DeviceFlowEventDto": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DeviceFlowEventType"
+              }
+            ]
+          },
+          "userCode": {
+            "type": "string"
+          },
+          "verificationUri": {
+            "type": "string"
+          },
+          "accessToken": {
+            "type": "string"
+          },
+          "reason": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DeviceFlowFailureReason"
+              }
+            ]
+          }
+        },
+        "required": [
+          "type"
         ]
       },
       "MetaConfigDto": {
