# packages/yucca-api/src/controllers/auth.controller.ts
@@ -3,7 +3,7 @@ import { ApiOkResponse, ApiQuery } from '@nestjs/swagger';
 import { type Request, type Response } from 'express';
 import { Duration } from 'luxon';
 import { type Observable } from 'rxjs';
-import { AuthDto } from 'src/dto/auth.dto';
+import { AuthDto, DeviceFlowEventDto } from 'src/dto/auth.dto';
 import { CookieName } from 'src/enum';
 import { Auth, AuthRoute } from 'src/middleware/auth.guard';
 import { AuthService } from 'src/services/auth.service';
@@ -90,6 +90,7 @@ export class AuthController {
   }
 
   @Sse('/oidc/device')
+  @ApiOkResponse({ type: DeviceFlowEventDto })
   @ApiQuery({ name: 'connection_type', type: String, required: false, description: 'immich | standalone | restic' })
   @ApiQuery({ name: 'connection_name', type: String, required: false, description: 'Instance name, e.g. a hostname' })
   oidcDeviceFlow(
